@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
+DOCS = debian/libshibsp-doc/usr/share/doc/libshibsp-doc
+
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
     DEBUG = --enable-debug
 else
@@ -76,6 +78,11 @@ override_dh_install:
 
 override_dh_installdocs:
 	dh_installdocs -A doc/NOTICE.txt
+	set -e; if [ -d "$(DOCS)" ] ; then \
+	    rm $(DOCS)/html/jquery.js ; \
+	    ln -s /usr/share/javascript/jquery/jquery.min.js \
+		$(DOCS)/html/jquery.js ; \
+	fi
 
 override_dh_installinit:
 	dh_installinit --name=shibd
